Setup Microsoft Identity

--- a/MusiX/API/appsettings.json
+++ b/MusiX/API/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LocalIdentityDatabaseConnection": "server=localhost;port=3306;database=musix_identity;uid=root;password=",
+    "LocalDatabaseConnection": "server=localhost;port=3306;database=musix_db;uid=musix_db;password=;SslMode=none",
+    "LiveIdentityDatabaseConnection": "",
+    "LiveDatabaseConnection": ""
+  },
   "AllowedHosts": "*"
 }
