--- a/.gitignore
+++ b/.gitignore
@@ -525,3 +525,5 @@ obj/
 /wwwroot/node_modules
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,csharp,dotnetcore
+MusiX/.editorconfig
+MusiX/.sonarqube
