--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,7 @@ jobs:
       if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
       shell: powershell
       run: |
-        New-Item -Path .\MusiX\.sonar\scanner -ItemType Directory
+        new-item -path .\MusiX\.sonar\scanner -itemtype directory
         dotnet tool update dotnet-sonarscanner --tool-path .\MusiX\.sonar\scanner
     
     - name: Build and analyze
