--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,6 +51,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
       shell: powershell
       run: |
-        .\.sonar\scanner\dotnet-sonarscanner begin /k:"MusiX" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+        begin /k:"MusiX" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" ./MusiX.sonar/scanner/dotnet-sonarscanner
         dotnet build ./MusiX
-        .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}" ./MusiX
+        end /d:sonar.login="${{ secrets.SONAR_TOKEN }}" ./MusiX.sonar/scanner/dotnet-sonarscanner
