--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,7 +47,9 @@ jobs:
     - name: Install SonarCloud scanner
       if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
       shell: powershell
-      run: dotnet tool install --global dotnet-sonarscanner
+      run: |
+        New-Item -Path .MusiX\.sonar\scanner -ItemType Directory
+        dotnet tool install --global dotnet-sonarscanner
 
     - name: Build and analyze
       env:
