--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, macOS-latest]
 
     steps:
     - name: Setup .NET
@@ -48,9 +48,8 @@ jobs:
       if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
       shell: powershell
       run: |
-        New-Item -Path .MusiX\.sonar\scanner -ItemType Directory
+        New-Item -Path ./MusiX\.sonar\scanner -ItemType Directory
         dotnet tool install --global dotnet-sonarscanner
-
     - name: Build and analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
