--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,7 +49,7 @@ jobs:
       shell: powershell
       run: |
         New-Item -Path ./MusiX\.sonar\scanner -ItemType Directory
-        dotnet tool install --global dotnet-sonarscanner
+        dotnet tool update --global dotnet-sonarscanner
     - name: Build and analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
