--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,11 +8,9 @@ on:
 
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, macOS-latest]
+    runs-on: windows-latest
+    outputs:
+      build-status: ${{ steps.build_and_analyze.outputs.triggered }}
 
     steps:
     - name: Setup .NET
@@ -52,6 +50,7 @@ jobs:
         dotnet tool update --global dotnet-sonarscanner
         
     - name: Build and analyze
+      id: build_and_analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -61,3 +60,39 @@ jobs:
         dotnet sonarscanner begin /k:"MusiX-Fontys_MusiX-BackEnd" /o:"musix-fontys" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
         dotnet build ./MusiX
         dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        
+  deploy:
+    runs-on: windows-latest
+    needs: [build]
+    if: needs.build.outputs.build-status == 'true'
+    
+    steps:
+    - name: Get Current Branch
+      id: get_branch
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      
+    - name: Build Docker-Compose
+      if: steps.get_branch.outputs.branch == 'main'
+      run: docker-compose up --build ./MusiX/API
+      
+    #- name: Login in to DockerHub
+    #  if: steps.get_branch.outputs.branch == 'main'
+    #  uses: docker/login-action@v1
+    #  with:
+    #    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+    #    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        
+    #- name: Set up Docker Buildx
+    #  if: steps.get_branch.outputs.branch == 'main'
+    #  uses: docker/setup-buildx-action@v1
+
+    #- name: Build and push
+    #  if: steps.get_branch.outputs.branch == 'main'
+    #  uses: docker/build-push-action@v2
+    #  with:
+    #    context: .
+    #    file: ./Dockerfile
+    #    push: true
+    #    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+    
