--- a/MusiX/API/appsettings.Production.json
+++ b/MusiX/API/appsettings.Production.json
@@ -3,7 +3,7 @@
   "JwtIssuer": "http://localhost",
   "MusiXMailPassword": "!&3zRSaw&WBuHeBy",
   "ConnectionStrings": {
-    "IdentityDatabaseConnection": "server=localhost;port=3306;database=musix_identity;uid=root;password=",
-    "MusiXDatabaseConnection": "server=localhost;port=3306;database=musix_db;uid=musix_db;password=;SslMode=none"
+    "IdentityDatabaseConnection": "server=db;port=3306;userid=root;password=test;database=musix_identity;",
+    "MusiXDatabaseConnection": "server=db;port=3306;userid=root;password=test;database=musix_db;sslMode=none;"
   }
 }
