--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -63,10 +63,6 @@ jobs:
     runs-on: windows-latest
     needs: [build]
     
-    defaults:
-      run:
-        working-directory: ./MusiX/API
-    
     steps:
     - name: Get Current Branch
       id: get_branch
@@ -74,7 +70,7 @@ jobs:
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       
     - name: Build Docker-Compose
-      run: docker-compose up --build
+      run: docker-compose up --build ./MusiX/API
       
     #- name: Login in to DockerHub
     #  if: steps.get_branch.outputs.branch == 'main'
