--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -78,29 +78,29 @@ jobs:
     #  shell: bash
     #  run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       
-    - name: Build Docker-Compose
-      shell: powershell
-      run: |
-        cd ./MusiX/API
-        docker-compose up --build
+    #- name: Build Docker-Compose
+    #  shell: powershell
+    #  run: |
+    #    cd ./MusiX/API
+    #    docker-compose up --build
       
-    #- name: Login in to DockerHub
-    #  if: steps.get_branch.outputs.branch == 'main'
-    #  uses: docker/login-action@v1
-    #  with:
-    #    username: ${{ secrets.DOCKER_HUB_USERNAME }}
-    #    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Login in to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+       
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./MusiX/API/Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/mcr.microsoft.com/dotnet/aspnet:5.0
         
-    #- name: Set up Docker Buildx
-    #  if: steps.get_branch.outputs.branch == 'main'
-    #  uses: docker/setup-buildx-action@v1
-
-    #- name: Build and push
-    #  if: steps.get_branch.outputs.branch == 'main'
-    #  uses: docker/build-push-action@v2
-    #  with:
-    #    context: .
-    #    file: ./Dockerfile
-    #    push: true
-    #    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
-    
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }
