--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -100,7 +100,7 @@ jobs:
         context: .
         file: ./MusiX/API/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/mcr.microsoft.com/dotnet/aspnet:5.0
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
         
     - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }
+      run: echo ${{ steps.docker_build.outputs.digest }}
