--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,7 +60,7 @@ jobs:
         dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
         
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: [build]
     
     steps:
