--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -63,6 +63,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     
+    defaults:
+      run:
+        working-directory: ./MusiX/API
+    
     steps:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -98,7 +102,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./MusiX/API/Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
         
