--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -102,7 +102,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: .MusiX/API/Dockerfile
+        file: ./MusiX/API/Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
         
