--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,9 +2,9 @@ name: CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ develop ]
 
 jobs:
   build:
@@ -58,53 +58,3 @@ jobs:
         dotnet sonarscanner begin /k:"MusiX-Fontys_MusiX-BackEnd" /o:"musix-fontys" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
         dotnet build ./MusiX
         dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-        
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    
-    defaults:
-      run:
-        working-directory: ./MusiX/API
-    
-    steps:
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-        
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-        
-    #- name: Get Current Branch
-    #  id: get_branch
-    #  shell: bash
-    #  run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      
-    #- name: Build Docker-Compose
-    #  shell: powershell
-    #  run: |
-    #    cd ./MusiX/API
-    #    docker-compose up --build
-      
-    - name: Login in to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./MusiX/API/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
-        
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
