--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,14 +98,24 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
       
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./MusiX/API/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
+    #- name: Build and push
+    #  id: docker_build
+    #  uses: docker/build-push-action@v2
+    #  with:
+    #    context: .
+    #    file: ./MusiX/API/Dockerfile
+    #    push: true
+    #    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
         
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+    #- name: Image digest
+    #  run: echo ${{ steps.docker_build.outputs.digest }}
+      
+    - name: Build and push
+      run: |
+        export DOCKER_BUILDKIT=0
+        export COMPOSE_DOCKER_CLI_BUILD=0
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
+        
+    - name: Execute Docker Compose
+      run: docker-compose up --build
