--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,12 +105,12 @@ jobs:
     #- name: Image digest
     #  run: echo ${{ steps.docker_build.outputs.digest }}
       
-    - name: Build and push
-      run: |
-        export DOCKER_BUILDKIT=0
-        export COMPOSE_DOCKER_CLI_BUILD=0
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
+    #- name: Build and push
+    #  run: |
+    #    export DOCKER_BUILDKIT=0
+    #    export COMPOSE_DOCKER_CLI_BUILD=0
+    #    docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
+    #    docker push ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
         
     - name: Execute Docker Compose
       run: docker-compose up --build
