--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,8 +109,8 @@ jobs:
     #  run: |
     #    export DOCKER_BUILDKIT=0
     #    export COMPOSE_DOCKER_CLI_BUILD=0
-    #    docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
-    #    docker push ${{ secrets.DOCKERHUB_USERNAME }}/musix:latest
+    #    docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/musix:latest
+    #    docker push ${{ secrets.DOCKER_HUB_USERNAME }}/musix:latest
         
     #- name: Execute Docker Compose
     #  run: docker-compose up --build
@@ -118,10 +118,10 @@ jobs:
     - name: Docker Build & Push Action
       uses: mr-smithers-excellent/docker-build-push@v5.6
       with:
-        image: ${{ secrets.DOCKERHUB_USERNAME }}/musix-api
+        image: rubenotter/musix-api
         tags: stable
         registry: docker.io
         dockerfile: MusiX/API/Dockerfile
         directory: MusiX/API
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
