--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,17 +72,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-        
-    #- name: Get Current Branch
-    #  id: get_branch
-    #  shell: bash
-    #  run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      
-    #- name: Build Docker-Compose
-    #  shell: powershell
-    #  run: |
-    #    cd ./MusiX/API
-    #    docker-compose up --build
       
     - name: Login in to DockerHub
       uses: docker/login-action@v1
@@ -93,32 +82,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
       
-    #- name: Build and push
-    #  id: docker_build
-    #  uses: docker/build-push-action@v2
-    #  with:
-    #    context: .
-    #    file: ./MusiX/API/Dockerfile
-    #    push: true
-    #    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api:latest
-        
-    #- name: Image digest
-    #  run: echo ${{ steps.docker_build.outputs.digest }}
-      
-    #- name: Build and push
-    #  run: |
-    #    export DOCKER_BUILDKIT=0
-    #    export COMPOSE_DOCKER_CLI_BUILD=0
-    #    docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/musix:latest
-    #    docker push ${{ secrets.DOCKER_HUB_USERNAME }}/musix:latest
-        
-    #- name: Execute Docker Compose
-    #  run: docker-compose up --build
-      
     - name: Docker Build & Push Action
       uses: mr-smithers-excellent/docker-build-push@v5.6
       with:
-        image: rubenotter/musix-api
+        image: ${{ secrets.DOCKER_HUB_USERNAME }}/musix-api
         tags: stable
         registry: docker.io
         dockerfile: MusiX/API/Dockerfile
